@@ -1,18 +1,22 @@
 package model.card.standard;
 
+import java.util.ArrayList;
+
 import engine.GameManager;
 import engine.board.BoardManager;
 import exception.ActionException;
 import exception.InvalidMarbleException;
 import model.player.Marble;
 
-import java.util.ArrayList;
+public class Four  extends Standard {
 
-public class Four extends Standard{
-    public Four(String name, String description, Suit suit, BoardManager boardManager, GameManager gameManager){
+    public Four(String name, String description, Suit suit, BoardManager boardManager, GameManager gameManager) {
         super(name, description, 4, suit, boardManager, gameManager);
     }
+
+    @Override
     public void act(ArrayList<Marble> marbles) throws ActionException, InvalidMarbleException {
-        boardManager.moveBy(marbles.getFirst(), -4, false);
+        boardManager.moveBy(marbles.get(0), -4, false);
     }
+
 }
